--- a/tutorial/index.jade
+++ b/tutorial/index.jade
@@ -1,4 +1,4 @@
-.chapter(data-title='Twilio Chat Swift')
+.chapter(data-title='Twilio Chat Android')
   .step(data-title='Introduction', data-file='app/src/main/AndroidManifest.xml')
     :markdown
       ## Introduction
@@ -171,6 +171,6 @@
 
       That's it! We've just implemented a simple chat application for Android.
 
-      Thanks for checking out this tutorial! If you have any feedback to share
-      with us, we'd love to hear it. Tweet
-      [@twilio](http://twitter.com/twilio) to let us know what you think.
+      Thanks for checking out this tutorial! If you have any feedback
+      to share with us, we'd love to hear it.
+      [Contact support](//www.twilio.com/help/contact) to let us know what you think.
