Use next-gen Twilio Android library and update code

--- a/app/src/main/res/layout/fragment_main_chat.xml
+++ b/app/src/main/res/layout/fragment_main_chat.xml
@@ -42,7 +42,8 @@
             android:minHeight="40dp"
             android:padding="7dp"
             android:textColor="@android:color/black"
-            android:textSize="14sp"/>
+            android:textSize="14sp"
+            android:imeOptions="actionSend"/>
 
         <Button
             android:id="@+id/buttonSend"
